--- a/locales/ja/common.json
+++ b/locales/ja/common.json
@@ -1,7 +1,7 @@
 {
   "title": "ホームページ",
   "intro": "自然言語処理 | 機械学習 | ソフトウェア のエンジニアをしています。\nちいかわのハチワレが好きで、かわいいキャラクター全般が好きです。仮想通貨、株、テクノロジーにも興味があります。",
-  "affiliation": "所属：芝浦工業大学 杉本研究室",
+  "affiliation": "所属：芝浦工業大学 [杉本研究室](http://www.lang.ise.shibaura-it.ac.jp/)",
   "latest_blog": "✨ 最新のブログ",
   "latest_pub": "📚 最近の公開物",
   "cta_more": "もっと見る"
