optimize for seo

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -1,6 +1,8 @@
 {
   "title": "Home Page",
   "intro": "I’m an engineer working in NLP, machine learning, and software.\nI like Hachiware from Chiikawa and cute characters in general. I’m also interested in cryptocurrency, stocks, and technology.",
+  "alias": "Name: Tatsuki Okada | 岡田 龍樹",
+  "handle": "Handles: iamtatsuki05 | iam_tatsuki05",
   "affiliation": "Affiliation: [Sugimoto Lab](http://www.lang.ise.shibaura-it.ac.jp/), Shibaura Institute of Technology",
   "latest_blog": "✨ Latest Blog Posts",
   "latest_pub": "📚 Recent Publications",
