--- a/locales/ja/common.json
+++ b/locales/ja/common.json
@@ -1,6 +1,8 @@
 {
   "title": "ホームページ",
   "intro": "自然言語処理 | 機械学習 | ソフトウェア のエンジニアをしています。\nちいかわのハチワレが好きで、かわいいキャラクター全般が好きです。仮想通貨、株、テクノロジーにも興味があります。",
+  "alias": "氏名：岡田 龍樹 | Tatsuki Okada",
+  "handle": "ハンドルネーム: iamtatsuki05 | iam_tatsuki05",
   "affiliation": "所属：芝浦工業大学 [杉本研究室](http://www.lang.ise.shibaura-it.ac.jp/)",
   "latest_blog": "✨ 最新のブログ",
   "latest_pub": "📚 最近の公開物",
